alta de empleados

--- a/VLaboralWeb/VLaboralWeb.csproj
+++ b/VLaboralWeb/VLaboralWeb.csproj
@@ -143,6 +143,205 @@
     <Content Include="App\TiposIdentificacion\TiposIdentificacionDF.js" />
     <Content Include="App\ExperienciasLaborales\Partials\VerificarExperienciasProfesional.html" />
     <Content Include="App\TiposNotificaciones\tiposNotificacionesDF.js" />
+    <Content Include="Countries and States\countries\afghanistan.js" />
+    <Content Include="Countries and States\countries\albania.js" />
+    <Content Include="Countries and States\countries\algeria.js" />
+    <Content Include="Countries and States\countries\andorra.js" />
+    <Content Include="Countries and States\countries\angola.js" />
+    <Content Include="Countries and States\countries\antigua-and-barbuda.js" />
+    <Content Include="Countries and States\countries\argentina.js" />
+    <Content Include="Countries and States\countries\armenia.js" />
+    <Content Include="Countries and States\countries\australia.js" />
+    <Content Include="Countries and States\countries\austria.js" />
+    <Content Include="Countries and States\countries\azerbaijan.js" />
+    <Content Include="Countries and States\countries\bahamas.js" />
+    <Content Include="Countries and States\countries\bahrain.js" />
+    <Content Include="Countries and States\countries\bangladesh.js" />
+    <Content Include="Countries and States\countries\barbados.js" />
+    <Content Include="Countries and States\countries\belarus.js" />
+    <Content Include="Countries and States\countries\belgium.js" />
+    <Content Include="Countries and States\countries\belize.js" />
+    <Content Include="Countries and States\countries\benin.js" />
+    <Content Include="Countries and States\countries\bhutan.js" />
+    <Content Include="Countries and States\countries\bolivia.js" />
+    <Content Include="Countries and States\countries\bosnia-and-herzegovina.js" />
+    <Content Include="Countries and States\countries\botswana.js" />
+    <Content Include="Countries and States\countries\brazil.js" />
+    <Content Include="Countries and States\countries\brunei-darussalam.js" />
+    <Content Include="Countries and States\countries\bulgaria.js" />
+    <Content Include="Countries and States\countries\burkina-faso.js" />
+    <Content Include="Countries and States\countries\burundi.js" />
+    <Content Include="Countries and States\countries\cambodia.js" />
+    <Content Include="Countries and States\countries\cameroon.js" />
+    <Content Include="Countries and States\countries\canada.js" />
+    <Content Include="Countries and States\countries\cape-verde.js" />
+    <Content Include="Countries and States\countries\central-african-republic.js" />
+    <Content Include="Countries and States\countries\chad.js" />
+    <Content Include="Countries and States\countries\chile.js" />
+    <Content Include="Countries and States\countries\china.js" />
+    <Content Include="Countries and States\countries\colombia.js" />
+    <Content Include="Countries and States\countries\comoros.js" />
+    <Content Include="Countries and States\countries\congo-the-democratic-republic-of-the.js" />
+    <Content Include="Countries and States\countries\congo.js" />
+    <Content Include="Countries and States\countries\costa-rica.js" />
+    <Content Include="Countries and States\countries\cote-d-ivoire-republic-of.js" />
+    <Content Include="Countries and States\countries\croatia.js" />
+    <Content Include="Countries and States\countries\cuba.js" />
+    <Content Include="Countries and States\countries\cyprus.js" />
+    <Content Include="Countries and States\countries\czech-republic.js" />
+    <Content Include="Countries and States\countries\denmark.js" />
+    <Content Include="Countries and States\countries\djibouti.js" />
+    <Content Include="Countries and States\countries\dominica.js" />
+    <Content Include="Countries and States\countries\dominican-republic.js" />
+    <Content Include="Countries and States\countries\ecuador.js" />
+    <Content Include="Countries and States\countries\egypt.js" />
+    <Content Include="Countries and States\countries\el-salvador.js" />
+    <Content Include="Countries and States\countries\equatorial-guinea.js" />
+    <Content Include="Countries and States\countries\eritrea.js" />
+    <Content Include="Countries and States\countries\estonia.js" />
+    <Content Include="Countries and States\countries\ethiopia.js" />
+    <Content Include="Countries and States\countries\fiji.js" />
+    <Content Include="Countries and States\countries\finland.js" />
+    <Content Include="Countries and States\countries\france.js" />
+    <Content Include="Countries and States\countries\gabon.js" />
+    <Content Include="Countries and States\countries\gambia.js" />
+    <Content Include="Countries and States\countries\georgia.js" />
+    <Content Include="Countries and States\countries\germany.js" />
+    <Content Include="Countries and States\countries\ghana.js" />
+    <Content Include="Countries and States\countries\greece.js" />
+    <Content Include="Countries and States\countries\greenland.js" />
+    <Content Include="Countries and States\countries\grenada.js" />
+    <Content Include="Countries and States\countries\guatemala.js" />
+    <Content Include="Countries and States\countries\guinea-bissau.js" />
+    <Content Include="Countries and States\countries\guinea.js" />
+    <Content Include="Countries and States\countries\guyana.js" />
+    <Content Include="Countries and States\countries\haiti.js" />
+    <Content Include="Countries and States\countries\honduras.js" />
+    <Content Include="Countries and States\countries\hong-kong.js" />
+    <Content Include="Countries and States\countries\hungary.js" />
+    <Content Include="Countries and States\countries\iceland.js" />
+    <Content Include="Countries and States\countries\india.js" />
+    <Content Include="Countries and States\countries\indonesia.js" />
+    <Content Include="Countries and States\countries\iran-islamic-republic-of.js" />
+    <Content Include="Countries and States\countries\iraq.js" />
+    <Content Include="Countries and States\countries\ireland.js" />
+    <Content Include="Countries and States\countries\israel.js" />
+    <Content Include="Countries and States\countries\italy.js" />
+    <Content Include="Countries and States\countries\jamaica.js" />
+    <Content Include="Countries and States\countries\japan.js" />
+    <Content Include="Countries and States\countries\jordan.js" />
+    <Content Include="Countries and States\countries\kazakhstan.js" />
+    <Content Include="Countries and States\countries\kenya.js" />
+    <Content Include="Countries and States\countries\kiribati.js" />
+    <Content Include="Countries and States\countries\korea-democratic-people-s-republic-of.js" />
+    <Content Include="Countries and States\countries\korea-republic-of.js" />
+    <Content Include="Countries and States\countries\kuwait.js" />
+    <Content Include="Countries and States\countries\kyrgyzstan.js" />
+    <Content Include="Countries and States\countries\lao-people-s-democratic-republic.js" />
+    <Content Include="Countries and States\countries\latvia.js" />
+    <Content Include="Countries and States\countries\lebanon.js" />
+    <Content Include="Countries and States\countries\lesotho.js" />
+    <Content Include="Countries and States\countries\liberia.js" />
+    <Content Include="Countries and States\countries\libyan-arab-jamahiriya.js" />
+    <Content Include="Countries and States\countries\liechtenstein.js" />
+    <Content Include="Countries and States\countries\lithuania.js" />
+    <Content Include="Countries and States\countries\luxembourg.js" />
+    <Content Include="Countries and States\countries\macedonia-the-former-yugoslav-republic-of.js" />
+    <Content Include="Countries and States\countries\madagascar.js" />
+    <Content Include="Countries and States\countries\malawi.js" />
+    <Content Include="Countries and States\countries\malaysia.js" />
+    <Content Include="Countries and States\countries\maldives.js" />
+    <Content Include="Countries and States\countries\mali.js" />
+    <Content Include="Countries and States\countries\malta.js" />
+    <Content Include="Countries and States\countries\marshall-islands.js" />
+    <Content Include="Countries and States\countries\mauritania.js" />
+    <Content Include="Countries and States\countries\mauritius.js" />
+    <Content Include="Countries and States\countries\mexico.js" />
+    <Content Include="Countries and States\countries\micronesia-federated-states-of.js" />
+    <Content Include="Countries and States\countries\moldova-republic-of.js" />
+    <Content Include="Countries and States\countries\monaco.js" />
+    <Content Include="Countries and States\countries\mongolia.js" />
+    <Content Include="Countries and States\countries\montenegro.js" />
+    <Content Include="Countries and States\countries\morocco.js" />
+    <Content Include="Countries and States\countries\mozambique.js" />
+    <Content Include="Countries and States\countries\myanmar.js" />
+    <Content Include="Countries and States\countries\namibia.js" />
+    <Content Include="Countries and States\countries\nauru.js" />
+    <Content Include="Countries and States\countries\nepal.js" />
+    <Content Include="Countries and States\countries\netherlands.js" />
+    <Content Include="Countries and States\countries\new-zealand.js" />
+    <Content Include="Countries and States\countries\nicaragua.js" />
+    <Content Include="Countries and States\countries\niger.js" />
+    <Content Include="Countries and States\countries\nigeria.js" />
+    <Content Include="Countries and States\countries\norway.js" />
+    <Content Include="Countries and States\countries\oman.js" />
+    <Content Include="Countries and States\countries\pakistan.js" />
+    <Content Include="Countries and States\countries\palau.js" />
+    <Content Include="Countries and States\countries\palestinian-territory-occupied.js" />
+    <Content Include="Countries and States\countries\panama.js" />
+    <Content Include="Countries and States\countries\papua-new-guinea.js" />
+    <Content Include="Countries and States\countries\paraguay.js" />
+    <Content Include="Countries and States\countries\peru.js" />
+    <Content Include="Countries and States\countries\philippines.js" />
+    <Content Include="Countries and States\countries\poland.js" />
+    <Content Include="Countries and States\countries\portugal.js" />
+    <Content Include="Countries and States\countries\qatar.js" />
+    <Content Include="Countries and States\countries\romania.js" />
+    <Content Include="Countries and States\countries\russian-federation.js" />
+    <Content Include="Countries and States\countries\rwanda.js" />
+    <Content Include="Countries and States\countries\saint-helena-ascension-and-tristan-da-cunha.js" />
+    <Content Include="Countries and States\countries\saint-kitts-and-nevis.js" />
+    <Content Include="Countries and States\countries\saint-lucia.js" />
+    <Content Include="Countries and States\countries\saint-vincent-and-the-grenadines.js" />
+    <Content Include="Countries and States\countries\samoa.js" />
+    <Content Include="Countries and States\countries\san-marino.js" />
+    <Content Include="Countries and States\countries\sao-tome-and-principe.js" />
+    <Content Include="Countries and States\countries\saudi-arabia.js" />
+    <Content Include="Countries and States\countries\senegal.js" />
+    <Content Include="Countries and States\countries\serbia.js" />
+    <Content Include="Countries and States\countries\seychelles.js" />
+    <Content Include="Countries and States\countries\sierra-leone.js" />
+    <Content Include="Countries and States\countries\singapore.js" />
+    <Content Include="Countries and States\countries\slovakia.js" />
+    <Content Include="Countries and States\countries\slovenia.js" />
+    <Content Include="Countries and States\countries\solomon-islands.js" />
+    <Content Include="Countries and States\countries\somalia.js" />
+    <Content Include="Countries and States\countries\south-africa.js" />
+    <Content Include="Countries and States\countries\south-sudan.js" />
+    <Content Include="Countries and States\countries\spain.js" />
+    <Content Include="Countries and States\countries\sri-lanka.js" />
+    <Content Include="Countries and States\countries\sudan.js" />
+    <Content Include="Countries and States\countries\suriname.js" />
+    <Content Include="Countries and States\countries\swaziland.js" />
+    <Content Include="Countries and States\countries\sweden.js" />
+    <Content Include="Countries and States\countries\switzerland.js" />
+    <Content Include="Countries and States\countries\syrian-arab-republic.js" />
+    <Content Include="Countries and States\countries\taiwan-province-of-china.js" />
+    <Content Include="Countries and States\countries\tajikistan.js" />
+    <Content Include="Countries and States\countries\tanzania-united-republic-of.js" />
+    <Content Include="Countries and States\countries\thailand.js" />
+    <Content Include="Countries and States\countries\timor-leste.js" />
+    <Content Include="Countries and States\countries\togo.js" />
+    <Content Include="Countries and States\countries\tonga.js" />
+    <Content Include="Countries and States\countries\trinidad-and-tobago.js" />
+    <Content Include="Countries and States\countries\tunisia.js" />
+    <Content Include="Countries and States\countries\turkey.js" />
+    <Content Include="Countries and States\countries\turkmenistan.js" />
+    <Content Include="Countries and States\countries\tuvalu.js" />
+    <Content Include="Countries and States\countries\uganda.js" />
+    <Content Include="Countries and States\countries\ukraine.js" />
+    <Content Include="Countries and States\countries\united-arab-emirates.js" />
+    <Content Include="Countries and States\countries\united-kingdom.js" />
+    <Content Include="Countries and States\countries\united-states-minor-outlying-islands.js" />
+    <Content Include="Countries and States\countries\united-states.js" />
+    <Content Include="Countries and States\countries\uruguay.js" />
+    <Content Include="Countries and States\countries\uzbekistan.js" />
+    <Content Include="Countries and States\countries\vanuatu.js" />
+    <Content Include="Countries and States\countries\venezuela.js" />
+    <Content Include="Countries and States\countries\viet-nam.js" />
+    <Content Include="Countries and States\countries\yemen.js" />
+    <Content Include="Countries and States\countries\zambia.js" />
+    <Content Include="Countries and States\countries\zimbabwe.js" />
     <Content Include="css\styles.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\style.css" />
@@ -386,6 +585,22 @@
     <Content Include="fonts\selection.json" />
     <Content Include="css\styles.css.map" />
     <Content Include="packages.config" />
+    <Content Include="Countries and States\countries.js" />
+    <Content Include="Countries and States\LICENSE" />
+    <Content Include="Countries and States\README.md" />
+    <Content Include="Countries and States\updaters\continents\africa.rb" />
+    <Content Include="Countries and States\updaters\continents\asia.rb" />
+    <Content Include="Countries and States\updaters\continents\europe.rb" />
+    <Content Include="Countries and States\updaters\continents\north-america.rb" />
+    <Content Include="Countries and States\updaters\continents\oceania.rb" />
+    <Content Include="Countries and States\updaters\continents\south-america.rb" />
+    <Content Include="Countries and States\updaters\continents\unsorted.rb" />
+    <Content Include="Countries and States\updaters\countries.rb" />
+    <Content Include="Countries and States\updaters\Gemfile" />
+    <Content Include="Countries and States\updaters\Gemfile.lock" />
+    <Content Include="Countries and States\updaters\lib\get_from_wikipedia.rb" />
+    <Content Include="Countries and States\updaters\lib\locale.rb" />
+    <Content Include="Countries and States\updaters\utils\html_coding.rb" />
     <None Include="Properties\PublishProfiles\vlaboralweb.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -527,7 +742,9 @@
     <Content Include="views\ui\table\smart.html" />
     <Content Include="views\ui\table\static.html" />
     <Content Include="views\ui\table\uigrid.html" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
