--- a/VLaboralWeb/VLaboralWeb.csproj
+++ b/VLaboralWeb/VLaboralWeb.csproj
@@ -131,8 +131,12 @@
     <Content Include="App\Requisitos\requisitosDF.js" />
     <Content Include="App\Rubros\rubrosCtrl.js" />
     <Content Include="App\Rubros\rubrosDF.js" />
+    <Content Include="App\Seguridad\changePasswordCtrl.js" />
+    <Content Include="App\Seguridad\Partials\changePassword.html" />
+    <Content Include="App\Seguridad\Partials\resetPassword.html" />
     <Content Include="App\Seguridad\Partials\registroEmpresa.html" />
     <Content Include="App\Seguridad\Partials\registroProfesional.html" />
+    <Content Include="App\Seguridad\resetPasswordCtrl.js" />
     <Content Include="App\TiposNivelesEstudio\tiposNivEstudioCtrl.js" />
     <Content Include="App\TiposNivelesEstudio\tiposNivEstudioDF.js" />
     <Content Include="App\TiposContrato\tiposContratoCtrl.js" />
@@ -345,6 +349,8 @@
     <Content Include="Countries and States\countries\zimbabwe.js" />
     <Content Include="css\styles.css" />
     <Content Include="favicon.ico" />
+    <Content Include="FileSaver\FileSaver.js" />
+    <Content Include="FileSaver\FileSaver.min.js" />
     <Content Include="fonts\style.css" />
     <Content Include="img\11.jpg" />
     <Content Include="img\13.jpg" />
@@ -358,6 +364,7 @@
     <Content Include="img\ny_street.jpg" />
     <Content Include="img\oc.jpg" />
     <Content Include="img\perfil.jpg" />
+    <Content Include="img\publicite aqui expectacular.png" />
     <Content Include="js\jquery.js" />
     <Content Include="js\smoothscroll.js" />
     <Content Include="libs\angular\angular-animate\1.5.0\angular-animate.js" />
@@ -508,50 +515,6 @@
     <Content Include="libs\angular\venturocket-angular-slider\angular-slider.css" />
     <Content Include="libs\angular\venturocket-angular-slider\build\angular-slider.js" />
     <Content Include="libs\angular\venturocket-angular-slider\build\angular-slider.min.js" />
-    <Content Include="libs\assets\animate.css\animate.css" />
-    <Content Include="libs\assets\font-awesome\css\font-awesome.css" />
-    <Content Include="libs\assets\font-awesome\css\font-awesome.min.css" />
-    <Content Include="libs\assets\font-awesome\fonts\fontawesome-webfont.svg" />
-    <Content Include="libs\jquery\bootstrap\dist\css\bootstrap-theme.css" />
-    <Content Include="libs\jquery\bootstrap\dist\css\bootstrap-theme.min.css" />
-    <Content Include="libs\jquery\bootstrap\dist\css\bootstrap.css" />
-    <Content Include="libs\jquery\bootstrap\dist\css\bootstrap.min.css" />
-    <Content Include="libs\jquery\bootstrap\dist\fonts\glyphicons-halflings-regular.svg" />
-    <Content Include="libs\jquery\bootstrap\dist\js\bootstrap.js" />
-    <Content Include="libs\jquery\bootstrap\dist\js\bootstrap.min.js" />
-    <Content Include="libs\jquery\bootstrap\dist\js\npm.js" />
-    <Content Include="libs\jquery\bower-jvectormap\jquery-jvectormap-1.2.2.min.js" />
-    <Content Include="libs\jquery\bower-jvectormap\jquery-jvectormap-us-aea-en.js" />
-    <Content Include="libs\jquery\bower-jvectormap\jquery-jvectormap-world-mill-en.js" />
-    <Content Include="libs\jquery\bower-jvectormap\jquery-jvectormap.css" />
-    <Content Include="libs\jquery\datatables\media\js\jquery.dataTables.min.js" />
-    <Content Include="libs\jquery\flot-spline\js\jquery.flot.spline.min.js" />
-    <Content Include="libs\jquery\flot.orderbars\js\jquery.flot.orderBars.js" />
-    <Content Include="libs\jquery\flot.tooltip\js\jquery.flot.tooltip.min.js" />
-    <Content Include="libs\jquery\flot\jquery.flot.js" />
-    <Content Include="libs\jquery\flot\jquery.flot.pie.js" />
-    <Content Include="libs\jquery\flot\jquery.flot.resize.js" />
-    <Content Include="libs\jquery\footable\css\fonts\footable.svg" />
-    <Content Include="libs\jquery\footable\css\footable.core.css" />
-    <Content Include="libs\jquery\footable\dist\footable.all.min.js" />
-    <Content Include="libs\jquery\jquery.easy-pie-chart\dist\jquery.easypiechart.fill.js" />
-    <Content Include="libs\jquery\jquery.sparkline\dist\jquery.sparkline.retina.js" />
-    <Content Include="libs\jquery\jquery\dist\jquery.js" />
-    <Content Include="libs\jquery\moment\moment.js" />
-    <Content Include="libs\jquery\plugins\integration\bootstrap\3\dataTables.bootstrap.css" />
-    <Content Include="libs\jquery\plugins\integration\bootstrap\3\dataTables.bootstrap.js" />
-    <Content Include="libs\jquery\plugins\integration\bootstrap\3\dataTables.bootstrap.min.js" />
-    <Content Include="libs\jquery\plugins\integration\bootstrap\3\index.html" />
-    <Content Include="libs\jquery\plugins\integration\bootstrap\images\sort_asc.png" />
-    <Content Include="libs\jquery\plugins\integration\bootstrap\images\sort_asc_disabled.png" />
-    <Content Include="libs\jquery\plugins\integration\bootstrap\images\sort_both.png" />
-    <Content Include="libs\jquery\plugins\integration\bootstrap\images\sort_desc.png" />
-    <Content Include="libs\jquery\plugins\integration\bootstrap\images\sort_desc_disabled.png" />
-    <Content Include="libs\jquery\screenfull\dist\screenfull.min.js" />
-    <Content Include="libs\jquery\waves\dist\waves.css" />
-    <Content Include="libs\jquery\waves\dist\waves.js" />
-    <Content Include="libs\jquery\waves\dist\waves.min.css" />
-    <Content Include="libs\jquery\waves\dist\waves.min.js" />
     <Content Include="scripts\angular-signalr-hub.js" />
     <Content Include="scripts\angular-signalr-hub.min.js" />
     <Content Include="scripts\controllers\largeLoad.json" />
@@ -564,24 +527,6 @@
     <Content Include="libs\angular\ng-file-upload\LICENSE" />
     <Content Include="libs\angular\ng-file-upload\README.md" />
     <Content Include="libs\angular\ng-grid\.DS_Store" />
-    <Content Include="libs\assets\font-awesome\css\font-awesome.css.map" />
-    <Content Include="libs\assets\font-awesome\fonts\fontawesome-webfont.eot" />
-    <Content Include="libs\assets\font-awesome\fonts\fontawesome-webfont.ttf" />
-    <Content Include="libs\assets\font-awesome\fonts\fontawesome-webfont.woff" />
-    <Content Include="libs\assets\font-awesome\fonts\fontawesome-webfont.woff2" />
-    <Content Include="libs\assets\font-awesome\fonts\FontAwesome.otf" />
-    <Content Include="libs\jquery\bootstrap\dist\css\bootstrap-theme.css.map" />
-    <Content Include="libs\jquery\bootstrap\dist\css\bootstrap.css.map" />
-    <Content Include="libs\jquery\bootstrap\dist\fonts\glyphicons-halflings-regular.eot" />
-    <Content Include="libs\jquery\bootstrap\dist\fonts\glyphicons-halflings-regular.ttf" />
-    <Content Include="libs\jquery\bootstrap\dist\fonts\glyphicons-halflings-regular.woff" />
-    <Content Include="libs\jquery\bootstrap\dist\fonts\glyphicons-halflings-regular.woff2" />
-    <Content Include="libs\jquery\footable\css\fonts\footable.eot" />
-    <Content Include="libs\jquery\footable\css\fonts\footable.ttf" />
-    <Content Include="libs\jquery\footable\css\fonts\footable.woff" />
-    <Content Include="libs\jquery\jquery.easy-pie-chart\.DS_Store" />
-    <Content Include="libs\jquery\jquery.sparkline\.DS_Store" />
-    <Content Include="libs\jquery\waves\dist\waves.min.js.map" />
     <Content Include="fonts\fonts\icomoon.eot" />
     <Content Include="fonts\fonts\icomoon.ttf" />
     <Content Include="fonts\fonts\icomoon.woff" />
@@ -604,6 +549,7 @@
     <Content Include="Countries and States\updaters\lib\get_from_wikipedia.rb" />
     <Content Include="Countries and States\updaters\lib\locale.rb" />
     <Content Include="Countries and States\updaters\utils\html_coding.rb" />
+    <None Include="Properties\PublishProfiles\toroidelaboral.pubxml" />
     <None Include="Properties\PublishProfiles\vlaboralweb.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -759,6 +705,8 @@
     <Folder Include="App\TiposDisponibilidad\Partials\" />
     <Folder Include="App\TiposEtapasOferta\Partials\" />
     <Folder Include="App\TiposNivelesEstudio\Partials\" />
+    <Folder Include="libs\assets\font-awesome\css\" />
+    <Folder Include="libs\assets\font-awesome\fonts\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
