agrego funciones para resetear y cambiar contraseñas, estan las vistas falta agregarle colorcitos

--- a/VLaboralWeb/VLaboralWeb.csproj
+++ b/VLaboralWeb/VLaboralWeb.csproj
@@ -148,6 +148,7 @@
     <Content Include="App\TiposIdentificacion\TiposIdentificacionDF.js" />
     <Content Include="App\ExperienciasLaborales\Partials\VerificarExperienciasProfesional.html" />
     <Content Include="App\TiposNotificaciones\tiposNotificacionesDF.js" />
+    <Content Include="Blob\Blob.js" />
     <Content Include="Countries and States\countries\afghanistan.js" />
     <Content Include="Countries and States\countries\albania.js" />
     <Content Include="Countries and States\countries\algeria.js" />
